--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "_resolved": false,
   "_spec": "https://npm.jig-san.me/g/!global",
   "_where": "/Users/mac/projects/sbdt1",
-  "main": "./index.js",
+  "main": "./g.js",
   "name": "g",
   "private": true,
   "version": "1.0.0"
